# python-template-uv

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .renovaterc.json  404.html  CHANGELOG.md  LICENSE  README.md  copier.yaml  extensions.py  index.html  mise.toml  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yaml  release.yaml
assets/javascripts/: bundle.79ae519e.min.js
configuration/variables/: index.html
css/: overrides.css
docs/: index.md  renovate-setup.md  requirements.txt
docs/configuration/: variables.md
docs/css/: overrides.css
docs/features/: ci-cd.md  docker.md  documentation.md  optional.md  overview.md  quality-tools.md  task-runner.md  testing.md
docs/getting-started/: prerequisites.md  quickstart.md  updating.md
docs/overrides/: main.html
features/ci-cd/: index.html
features/docker/: index.html
features/documentation/: index.html
features/optional/: index.html
features/overview/: index.html
features/quality-tools/: index.html
features/task-runner/: index.html
features/testing/: index.html
getting-started/prerequisites/: index.html
getting-started/quickstart/: index.html
getting-started/updating/: index.html
includes/: dependencies.jinja  extra_dev_dependencies.jinja  pytorch_indexes.jinja  pytorch_indixes.jinja
includes/licenses/: ISC License.jinja
search/: search_index.json
template/: .editorconfig  .gitignore  .pre-commit-config.yaml.jinja  .python-version.jinja  LICENSE.jinja  Makefile.jinja  README.md.jinja  duties.py  duties.py.jinja  mise.toml.jinja  mkdocs.yml.jinja  pyproject.toml.jinja  {% if copyright_license != 'No License' %}LICENSE{% endif %}.jinja  {% if dockerfile %}.dockerignore{% endif %}  {% if dockerfile %}.dockerignore{% endif %}.jinja  {% if dockerfile %}Dockerfile{% endif %}.jinja  {% if dockerfile %}compose.override.yaml{% endif %}.jinja  {% if dockerfile %}compose.yaml{% endif %}.jinja  {% if repository_provider == 'github' and dependency_updater == 'renovate' %}renovate.json5{% endif %}.jinja  {% if tox %}tox.ini{% endif %}.jinja  {% if with_settings %}.env.example{% endif %}.jinja
template/docs/: index.md.jinja  modules.md.jinja
template/docs/development/: ci-cd.md.jinja  contributing.md.jinja  setup.md.jinja  task-runner.md.jinja
template/docs/getting-started/: installation.md.jinja  usage.md.jinja
template/scripts/git-hooks/: post-commit  (+2 more)
template/tests/: {% if with_settings %}test_config.py{% endif %}.jinja  {% if with_typer_cli %}test_cli.py{% endif %}.jinja
template/{% if repository_provider == 'github' %}.github{% endif %}/: PULL_REQUEST_TEMPLATE.md
(+16 files in other folders)
