[project]
name = "python-template-uv"
version = "1.0.0"
description = "A Copier-powered template for creating Python packages managed with uv."
readme = "README.md"
authors = [{ name = "Bassem Karoui", email = "bassem.karoui1@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ['python', 'copier-template', 'project-template', 'uv']
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cairosvg>=2.7",
    "commitizen>=4.5.1",
    "copier>=9.6.0",
    "copier-templates-extensions>=0.3.1",
    "cz-conventional-gitmoji>=0.7.0",
    "markdown-callouts>=0.4",
    "mkdocs>=1.6,<2.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4",
    "mkdocs-material>=9.6",
    "mkdocs-minify-plugin>=0.8",
    "pillow>=10.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.5",
]

[tool.commitizen]
name = "cz_gitmoji"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = false
gpg_sign = true
